empezando con el carrito

--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -71,7 +71,7 @@
                 <p>
                   <select name="size" id="size">
                     <option
-                      value="<%= locals.oldData ? oldData.size : null %>"
+                      value=""
                       disabled
                       selected >
                       - selecciona el tamaño -
@@ -102,7 +102,7 @@
                 <p>
                   <select name="bodega" id="bodega">
                     <option
-                      value="<%= locals.oldData ? oldData.bodega : null %>"
+                      value=""
                       disabled
                       selected
                     >
@@ -133,7 +133,7 @@
                 <p>
                   <select name="province" id="province">
                     <option
-                      value="<%= locals.oldData ? oldData.province : null %>"
+                      value=""
                       disabled
                       selected
                     >
@@ -164,7 +164,7 @@
                 <p>
                   <select name="category" id="category">
                     <option
-                      value="<%= locals.oldData ? oldData.category : null %>"
+                      value=""
                       disabled
                       selected
                     >
@@ -231,7 +231,7 @@
         </div>
       </div>
     </main>
-    <script src="/js/crear-producto.js"></script>
+
 
     <%- include("../partials/footer.ejs") %>
   </body>
