algunas mejoras del proceso de registro

--- a/src/views/users/editar-perfil.ejs
+++ b/src/views/users/editar-perfil.ejs
@@ -9,7 +9,7 @@
   </head>
   <body class="edit-profile">
     <h1>Editar perfil</h1>
-    <form action="/users/update?_method=PUT" method="POST">
+    <form action="/users/perfil?_method=PUT" method="POST">
       <div>
         <label for="name" class="edit-label">Nombre:</label><br />
         <input
