--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -19,7 +19,7 @@
               </div>
               <!-- <img src="<%= user.image %>" alt="Imagen de perfil" /> -->
               <div class="saludo-perfil">
-                <p>Hola <%= user.userName %>!</p>
+                <p>Hola <%= user.name %>!</p>
               </div>
             </div>
             <div class="contenedor-botones-perfil">
