--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </form>
-        <div class="icons"><a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a></i></div>
+        <div class="icons"><a href="/products/carrito"><i class="fa-solid fa-cart-shopping"></i></a></i></div>
   
     </div>
     <nav class="menu-desktop">
@@ -25,7 +25,7 @@
             <a href="/bodegas"><li>Bodegas</li></a>
             <a href="/provincias"><li>Provincias</li></a>
             <a href="/novedades"><li>Novedades</li></a>
-            <a href="/accesorios"><li>Accesorios</li></a>
+            <a href="/products/carrito"><li>Carrito</li></a>
         </ul>
     </nav>
     <div class="icons-box">
