--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -17,7 +17,7 @@
                   class="img-perfil"
                 />
               </div>
-              <!-- <img src="<%= user.image %>" alt="Imagen de perfil" /> -->
+              <img src="../../../public/images/avatars/<%= user.image %>" alt="Imagen de perfil" />
               <div class="saludo-perfil">
                 <p>Hola <%= user.name %>!</p>
               </div>
