--- a/public/css/editar-perfil.css
+++ b/public/css/editar-perfil.css
@@ -7,7 +7,14 @@
 h1 {
   color: #80083f;
 }
-
+.products{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
 .edit-profile {
   text-align: center;
 }
