--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -11,13 +11,16 @@
           <div class="contenedor-perfil">
             <div class="img-saludo">
               <div class="circulo-img">
-                <img
+                <% if (user.image == ""){ %>
+                  <img
                   src="/images/imagen-de-perfil.png"
                   alt="Imagen de perfil"
                   class="img-perfil"
-                />
-              </div>
-              <img src="../../../public/images/avatars/<%= user.image %>" alt="Imagen de perfil" />
+                  />
+                <% }else{ %>
+                  <img src="/images/avatars/<%= user.image %>" alt="Imagen de perfil" class="img-perfil"/>
+                <% } %> 
+                </div>
               <div class="saludo-perfil">
                 <p>Hola <%= user.name %>!</p>
               </div>
