--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -210,7 +210,7 @@
                 <input
                   type="file"
                   id="image_id"
-                  name="image_id"
+                  name="image"
                   class="input-foto"
                 />
               </div>
