--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,7 +24,7 @@
             <a href="/products"><li>Productos</li></a>
             <a href="/bodegas"><li>Bodegas</li></a>
             <a href="/provincias"><li>Provincias</li></a>
-            <a href="/novedades"><li>Novedades</li></a>
+            <a href="/products/crear"><li>Crear</li></a>
             <a href="/products/carrito"><li>Carrito</li></a>
         </ul>
     </nav>
