el boton agregar al carrito lleva a la vista /carrito

--- a/src/views/products/detalles.ejs
+++ b/src/views/products/detalles.ejs
@@ -97,7 +97,9 @@
                 <div class="details cantidad-agregar">
                   <div class="agregar">
                     <div class="details agregar-al-carrito">
-                      <p>Agregar al carrito</p>
+                      <a href="/products/carrito">
+                        <p>Agregar al carrito</p>
+                      </a>
                     </div>
                   </div>
 
