multer de products funcionando

--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -16,7 +16,7 @@
         </div>
 
         <div class="contenedor-form">
-          <form action="/products" method="POST">
+          <form action="/products" method="POST" enctype="multipart/form-data">
             <div class="contenedor-inputs">
               <div class="label-input">
                 <label for="name" class="form-label"
