--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -36,7 +36,7 @@
                   <div class="div-producto">
                     <div class="contenedor-imagen-producto">
                       <img
-                        src="/images/productImages/<%= product.image%>"
+                        src="/images/productImages/<%= product.foto%>"
                         alt="Imagen de <%= product.name%>"
                         class="imagen-producto"
                       />
