--- a/src/views/users/editar-perfil.ejs
+++ b/src/views/users/editar-perfil.ejs
@@ -10,8 +10,11 @@
   <body class="edit-profile">
     <h1>Editar perfil</h1>
     <form action="/users/perfil?_method=PUT" method="POST" enctype="multipart/form-data">
+      <div class="errores">
+        <ul></ul>
+    </div>
       <div> 
-        <label for="name" class="edit-label">Nombre:</label><br />
+        <label for="" class="edit-label">Nombre:</label><br />
         <input
           class="edit-input"
           type="text"
@@ -20,7 +23,7 @@
           value="<%= user ? user.name : oldData.name %>"
         /><br />
       </div>
-      <label for="lastName" class="edit-label">Apellido:</label><br />
+      <label for="" class="edit-label">Apellido:</label><br />
       <input
         class="edit-input"
         type="text"
@@ -28,7 +31,7 @@
         name="lastName"
         value="<%= user ? user.lastName : oldData.lastName %>"
       /><br />
-      <label for="email" class="edit-label">Correo electrónico:</label><br />
+      <label for="" class="edit-label">Correo electrónico:</label><br />
       <input
         class="edit-input"
         type="email"
@@ -37,7 +40,7 @@
         value="<%= user ? user.email : oldData.email %>"
         disabled
       /><br />
-      <label for="userName" class="edit-label">Nombre de usuario:</label><br />
+      <label for="" class="edit-label">Nombre de usuario:</label><br />
       <input
         class="edit-input"
         type="text"
@@ -45,7 +48,7 @@
         name="userName"
         value="<%= user ? user.userName : oldData.userName %>"
       /><br />
-      <label for="adress" class="edit-label">Dirección:</label><br />
+      <label for="" class="edit-label">Dirección:</label><br />
       <input
         class="edit-input"
         type="text"
@@ -53,17 +56,17 @@
         name="adress"
         value="<%= user? user.adress : oldData.adress %>"
       /><br />
-      <label for="image" class="edit-label">Imagen de perfil:</label><br />
+      <label for="" class="edit-label">Imagen de perfil:</label><br />
       <input class="edit-input" type="file" id="image" name="image" /><br />
       <br />
-      <label for="password" class="edit-label">Contraseña actual:</label><br />
+      <label for="" class="edit-label">Contraseña actual:</label><br />
       <input
         class="edit-input"
         type="password"
         id="password"
         name="password"
       /><br />
-      <label for="confirmPassword" class="edit-label"
+      <label for="" class="edit-label"
         >Confirmar contraseña:</label
       ><br />
       <input
@@ -83,5 +86,6 @@
   <div class="back">
     <a class="back-button"href="/users/perfil">Volver</a>
   </div>
+  <script src="/js/editar-perfil.js"></script>
   </body>
 </html>
