validation front login

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,6 +11,9 @@
 body {
    font-family:'Assistant', sans-serif;;
 }
+li {
+    list-style-type: none;
+}
 /*************** Principal ***************/
 .cuadro {
     display:flex;
@@ -117,3 +120,21 @@ body {
     margin-top: 5px;
     display: flex;
 }
+
+.is-valid {
+    color: #198754;
+  }
+  
+  .is-invalid {
+    color: red;
+    list-style-type: none;
+  }
+  
+  .alert-warning{
+    border-color: red;
+    text-align: center;
+    border-radius: 10px;
+    border-width: 2px;
+    padding: 10px;
+    border-style: solid;
+  }
